--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
   --gutter: 30px; /*отступы между элементами*/
   --side-small: 26;
   --size-big: 36;
+  --dept: 4000px;
 }
 
 @font-face {
@@ -30,6 +31,7 @@ body {
   font-family: railway_c, sans-serif;
   font-size: calc(var(--index) * .8); /*добавляет адаптивность шрифту*/
   line-height: 1.75;
+  height: calc(var(--dept));
 }
 
 .container {
@@ -42,4 +44,15 @@ body {
 .gallery {
   transform-style: preserve-3d; /*чтобы передать дочерним элементам родительское свойство perspective*/
   height: 100%;
+}
+
+.frame {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity .75s ease; /*для плавного изменения opacity*/
+  will-change: transform;
 }
